--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table border="1">
+    <!-- <table border="1">
       <thead>
         <tr>
           <th>#</th>
@@ -854,6 +854,24 @@
           <td>4</td>
         </tr>
       </tbody>
+    </table> -->
+
+    <label for="name">Введите ваше имя и фамилию: </label>
+    <input type="text" id="name" placeholder="Орозобеков Досбол"/>
+    <button onclick="getGrades()">Получить оценки</button>
+    <table id="grades">
+      <thead>
+        <tr>
+          <th>Предмет</th>
+          <th>Оценка за 1-й четверть</th>
+          <th>Оценка за 2-й четверть</th>
+          <th>Оценка за 3-й четверть</th>
+          <th>Оценка за 4-й четверть</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
     </table>
+
+    <script src="./script.js"></script>
   </body>
 </html>
