add css for batton

--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
     </table> -->
 
     <label for="name">Введите ваше имя и фамилию: </label>
-    <input type="text" id="name" placeholder="Орозобеков Досбол"/>
+    <input type="text" id="name" placeholder="Орозобеков Досбол" required/>
     <button onclick="getGrades()">Получить оценки</button>
     <table id="grades">
       <thead>
